--- a/src/main/resources/static/redoc.html
+++ b/src/main/resources/static/redoc.html
@@ -17,8 +17,20 @@
         }
     </style>
 </head>
+<!--<body>-->
+<!--<redoc spec-url='/openapi/api.yaml'></redoc>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>-->
+<!--</body>-->
 <body>
-<redoc spec-url='/openapi/api.yaml'></redoc>
-<script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script>
+<div id="redoc-container"></div>
+<script src="https://cdn.jsdelivr.net/npm/redoc@2.0.0-rc.55/bundles/redoc.standalone.min.js"> </script>
+<script src="https://cdn.jsdelivr.net/gh/wll8/redoc-try@1.4.3/dist/try.js"></script>
+<script>
+    // initTry(`https://petstore.swagger.io/v2/swagger.json`)
+    initTry({
+        openApi: `/openapi/api.yaml`,
+        redocOptions: {scrollYOffset: 50},
+    })
+</script>
 </body>
 </html>
